--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
+    "@primer/octicons-react": "^9.3.1",
     "babel-plugin-styled-components": "^1.10.0",
+    "code-prettify": "https://github.com/google/code-prettify",
+    "foundation-sites": "^6.6.1",
     "gatsby": "^2.3.25",
-    "gatsby-image": "^2.0.39",
+    "gatsby-image": "^2.2.40",
     "gatsby-plugin-feed-mdx": "^1.0.0",
+    "gatsby-plugin-glamor": "^2.1.20",
     "gatsby-plugin-google-analytics": "^2.0.18",
     "gatsby-plugin-manifest": "^2.0.29",
     "gatsby-plugin-mdx": "^1.0.52",
     "gatsby-plugin-netlify-cms": "^4.0.0",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sharp": "^2.0.35",
+    "gatsby-plugin-sass": "^2.1.28",
+    "gatsby-plugin-sharp": "^2.4.5",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-typography": "^2.2.13",
     "gatsby-remark-copy-linked-files": "^2.0.11",
@@ -28,19 +33,43 @@
     "gatsby-remark-responsive-iframe": "^2.1.1",
     "gatsby-remark-smartypants": "^2.0.9",
     "gatsby-remark-vscode": "^1.0.4",
+    "gatsby-source-drupal": "^3.3.18",
     "gatsby-source-filesystem": "^2.0.29",
-    "gatsby-transformer-sharp": "^2.1.18",
+    "gatsby-syntax-highlights-dracula": "^0.1.5",
+    "gatsby-transformer-sharp": "^2.3.14",
+    "glamor": "^2.20.40",
+    "gray-percentage": "^2.0.0",
+    "highlight": "^0.2.4",
+    "lodash": "^4.17.15",
+    "lowlight": "^1.13.1",
     "netlify-cms-app": "^2.9.1",
+    "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.9.0",
     "react-switch": "^5.0.0",
     "react-typography": "^0.16.19",
+    "rehype-highlight": "^3.1.0",
+    "rehype-raw": "^4.0.1",
+    "rehype-react": "^4.0.1",
+    "rehype-sanitize": "^3.0.0",
+    "remark-code-titles": "^0.1.1",
+    "remark-github": "^8.0.0",
+    "remark-parse": "^7.0.2",
+    "remark-rehype": "^5.0.0",
+    "slash": "^3.0.0",
     "styled-components": "^4.2.0",
+    "typeface-josefin-sans": "^0.0.75",
+    "typeface-josefin-slab": "^0.0.72",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.54",
+    "typeface-rochester": "^0.0.72",
     "typography": "^0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19"
+    "typography-breakpoint-constants": "^0.16.19",
+    "typography-theme-wordpress-2016": "^0.16.19",
+    "unified": "^8.4.2"
   },
   "devDependencies": {
     "prettier": "^1.17.0"
@@ -57,7 +86,7 @@
   },
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop --host=0.0.0.0 --port=8020",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
